objects/GEMS_Group_Section__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GEMS Group Sections</relationshipLabel>
        <relationshipName>GEMS_Group_Sections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <label>Alpha Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Assoc__c</fullName>
        <description>billing association at group-section level</description>
        <label>Billing Assoc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBS - Cancel BlueSTAR Section</fullName>
                </value>
                <value>
                    <fullName>CBG – Cancel BlueStar Group</fullName>
                    <isActive>false</isActive>
                    <label>CBG – Cancel BlueStar Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <label>Cancellation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <label>Cancellation Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Group Sections</relationshipLabel>
        <relationshipName>Group_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_No__c</fullName>
        <label>Group No.</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDescUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDescUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Par_Plan_Codes__c</fullName>
        <label>Par Plan Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <label>Requested Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPI_Codes__c</fullName>
        <label>SPI Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Can_Date__c</fullName>
        <label>Section Can Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Description__c</fullName>
        <label>Section Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Eff_Date__c</fullName>
        <label>Section Eff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_No__c</fullName>
        <label>Section No.</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Group_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GEMS Group Section</label>
    <nameField>
        <label>Group Section No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Group Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Section_No__c ) != 4</errorConditionFormula>
        <errorMessage>Section No. - Expecting a 4-digit alpha-numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length4SectionNo</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( Section_No__c ) &gt; 4</errorConditionFormula>
        <errorMessage>Section No. - Expecting a 4-digit numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length6GroupNo</fullName>
        <active>false</active>
        <errorConditionFormula>LEN (Group_No__c )  &lt;= 5</errorConditionFormula>
        <errorMessage>Group No. Expecting a 6 digit alpha-numeric value</errorMessage>
    </validationRules>
</CustomObject>